src/OpenCvSharp.Native/include/open_cv_sharp/face/face.h

typedef struct jyppx_ocv_face_facemark jyppx_ocv_face_facemark;
typedef struct jyppx_ocv_face_facemark_train jyppx_ocv_face_facemark_train;
typedef struct jyppx_ocv_face_facemark_lbf jyppx_ocv_face_facemark_lbf;
typedef struct jyppx_ocv_face_mace jyppx_ocv_face_mace;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_fit(
    jyppx_ocv_face_facemark* facemark,
    const jyppx_ocv_mat* image,
    const int* faces,
    int face_count,
    int* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_fit_landmarks_count(
    const jyppx_ocv_face_facemark* facemark,
    int* face_count,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_fit_landmarks_fill(
    const jyppx_ocv_face_facemark* facemark,
    int* landmark_offsets,
    int landmark_offset_capacity,
    float* landmarks_buffer,
    int landmark_point_capacity,
    int* face_count,
    int* point_count);
/* FacemarkTrain surface: add training sample, get faces from default detector. */
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_train_add_sample(
    jyppx_ocv_face_facemark_train* facemark,
    const jyppx_ocv_mat* image,
    const float* landmarks,
    int landmark_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_train_training(
    jyppx_ocv_face_facemark_train* facemark);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_train_get_faces_count(
    jyppx_ocv_face_facemark_train* facemark,
    const jyppx_ocv_mat* image,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_train_get_faces_fill(
    jyppx_ocv_face_facemark_train* facemark,
    const jyppx_ocv_mat* image,
    int* faces_buffer,
    int face_capacity,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_save(
    const jyppx_ocv_face_facemark* facemark,
    const char* path);
/* FacemarkLBF concrete factory. */
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_lbf_create(
    int n_landmarks,
    int init_shape_n,
    int stages_n,
    int tree_n,
    int tree_depth,
    double shape_offset,
    double bagging_overlap,
    int verbose,
    jyppx_ocv_face_facemark_lbf** facemark);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_facemark_lbf_create_ex(
    int n_landmarks,
    int init_shape_n,
    int stages_n,
    int tree_n,
    int tree_depth,
    double shape_offset,
    double bagging_overlap,
    int verbose,
    int save_model,
    unsigned int seed,
    const char* cascade_face,
    const char* model_filename,
    const int* feats_m,
    int feats_count,
    const double* radius_m,
    int radius_count,
    const int* left_pupil,
    int left_pupil_count,
    const int* right_pupil,
    int right_pupil_count,
    int detect_roi_x,
    int detect_roi_y,
    int detect_roi_width,
    int detect_roi_height,
    jyppx_ocv_face_facemark_lbf** facemark);
/* MACE: cancellable biometrical correlation filter authentication. */
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_create(
    int imgsize,
    jyppx_ocv_face_mace** mace);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_load(
    const char* filename,
    const char* objname,
    jyppx_ocv_face_mace** mace);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_salt(
    jyppx_ocv_face_mace* mace,
    const char* passphrase);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_train(
    jyppx_ocv_face_mace* mace,
    const jyppx_ocv_mat* const* images,
    int image_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_same(
    const jyppx_ocv_face_mace* mace,
    const jyppx_ocv_mat* query,
    int* same);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_save(
    const jyppx_ocv_face_mace* mace,
    const char* path);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_face_mace_empty(
    const jyppx_ocv_face_mace* mace,
    int* empty);