src/OpenCvSharp/Internal/Interop/NativeMethods.Face.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_fit")]
        internal static extern int FaceFacemarkFit(IntPtr facemark, IntPtr image, int[] faces, int faceCount, out int result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_fit_landmarks_count")]
        internal static extern int FaceFacemarkFitLandmarksCount(IntPtr facemark, out int faceCount, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_fit_landmarks_fill")]
        internal static extern int FaceFacemarkFitLandmarksFill(IntPtr facemark, int[] landmarkOffsets, int landmarkOffsetCapacity, float[] landmarksBuffer, int landmarkPointCapacity, out int faceCount, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_add_sample")]
        internal static extern int FaceFacemarkTrainAddSample(IntPtr facemark, IntPtr image, float[] landmarks, int landmarkCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_training")]
        internal static extern int FaceFacemarkTrainTraining(IntPtr facemark);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_get_faces_count")]
        internal static extern int FaceFacemarkTrainGetFacesCount(IntPtr facemark, IntPtr image, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_train_get_faces_fill")]
        internal static extern int FaceFacemarkTrainGetFacesFill(IntPtr facemark, IntPtr image, int[] faces, int faceCapacity, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_save")]
        internal static extern int FaceFacemarkSave(IntPtr facemark, byte[] path);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_lbf_create")]
        internal static extern int FaceFacemarkLBFCreate(int nLandmarks, int initShapeN, int stagesN, int treeN, int treeDepth, double shapeOffset, double baggingOverlap, int verbose, out IntPtr facemark);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_facemark_lbf_create_ex")]
        internal static extern int FaceFacemarkLBFCreateEx(int nLandmarks, int initShapeN, int stagesN, int treeN, int treeDepth, double shapeOffset, double baggingOverlap, int verbose, int saveModel, uint seed, byte[] cascadeFace, byte[] modelFilename, int[] featsM, int featsCount, double[] radiusM, int radiusCount, int[] leftPupil, int leftPupilCount, int[] rightPupil, int rightPupilCount, int detectRoiX, int detectRoiY, int detectRoiWidth, int detectRoiHeight, out IntPtr facemark);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_create")]
        internal static extern int FaceMaceCreate(int imgSize, out IntPtr mace);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_load")]
        internal static extern int FaceMaceLoad(byte[] filename, byte[] objname, out IntPtr mace);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_salt")]
        internal static extern int FaceMaceSalt(IntPtr mace, byte[] passphrase);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_train")]
        internal static extern int FaceMaceTrain(IntPtr mace, IntPtr[] images, int imageCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_same")]
        internal static extern int FaceMaceSame(IntPtr mace, IntPtr query, out int same);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_save")]
        internal static extern int FaceMaceSave(IntPtr mace, byte[] path);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_face_mace_empty")]
        internal static extern int FaceMaceEmpty(IntPtr mace, out int empty);
    }
}
#endif
